Fixed $ spacing

--- a/estore-ui/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/estore-ui/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -53,9 +53,7 @@ th {
 }
 
 .iconContainer {
-    position: absolute;
-    top: 35%;
-    left: 5%;
+    margin: auto;
 }
 
 .moneyContainer input:focus {
